--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,9 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  /* Todo: make this scrollbar visible */
+  /* width: 5px; */
+  width: 0px;
 }
 ::-webkit-scrollbar-track {
   background: #09090a;
