feat: enhance Moments feature with author information; update CreateMomentButton and MomentCircle components; improve styling and responsiveness in MomentsList

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,10 @@ body {
   }
 }
 
+.momentdiv::-webkit-scrollbar {
+  display: none;
+}
+
 ::-webkit-scrollbar {
   /* Todo: make this scrollbar visible */
   /* width: 5px; */
